# sh4asm

./: CMakeLists.txt  README  err.h
mingw_w64/: err.c  err.h  getopt.c  getopt.h
sh4asm/: main.c
sh4asm_core/: disas.c  disas.h  lexer.c  lexer.h  parser.c  parser.h  sh4_asm_emit.c  sh4_asm_emit.h  sh4_bin_emit.c  sh4_bin_emit.h  sh4asm.c  sh4asm.h  sh4asm_bin_emit.h  sh4asm_txt_emit.h
test/: sh4asm_test.c
